--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="2023버전 프론트엔드 개발자 조서은의 포트폴리오 사이트입니다." />
     <meta name="keyword" content="포트폴리오, 프론트엔드, 조서은, 리액트, portfolio, FrontEnd, SeoeunCho, react.js" />
-    <title>포트폴리오 사이트 만들기 😜 React-Site</title>
+    <title>조서은 포트폴리오 😘 Seoeun-Portfolio</title>
+    
     <link rel="icon" href="favicon.ico" />
   </head>
   <body>
