🥳 프로젝트 자동재생

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,13 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1" /> -->
+    <meta content="yes" name="apple-mobile-web-app-capable" />
+    <meta content="minimum-scale=1.0, width=device-width, maximum-scale=1, user-scalable=no" name="viewport" />
     <meta name="description" content="2023버전 프론트엔드 개발자 조서은의 포트폴리오 사이트입니다." />
     <meta name="keyword" content="포트폴리오, 프론트엔드, 조서은, 리액트, portfolio, FrontEnd, SeoeunCho, react.js" />
     <title>조서은 포트폴리오 😘 Seoeun-Portfolio</title>
-    
+
     <link rel="icon" href="favicon.ico" />
   </head>
   <body>
