--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta content="yes" name="apple-mobile-web-app-capable" />
     <meta content="minimum-scale=1.0, width=device-width, maximum-scale=1, user-scalable=no" name="viewport" />
     <meta name="description" content="2023버전 프론트엔드 개발자 조서은의 포트폴리오 사이트입니다." />
-    <meta property="og:image" content="thumbnail.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/thumbnail.png" />
     <meta name="keyword" content="포트폴리오, 프론트엔드, 조서은, 리액트, portfolio, FrontEnd, SeoeunCho, react.js" />
     <title>조서은 포트폴리오 😘 Seoeun-Portfolio</title>
 
